# meronia

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: main.cpp
src/base/: BaseInterfaces.h  CommonConstants.h  Contexts.h  Engine.cpp  Engine.h  Entity.h  Helpers.h  Transform.h  Vector2D.h
src/base/systems/: EntityManager.cpp  EntityManager.h  InputManager.h  UUIDGenerator.h
src/entities/: DebugEntity.cpp  DebugEntity.h
src/entities/map/: Map.cpp  Map.h  MapData.cpp  MapData.h
